fix scrollbar

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -46,7 +46,7 @@ $navbar-breakpoint: 1200px
 		align-items: center
 
 
-body.dark-mode
+.dark-mode body
     $card-content-background-color: black !important
 
 body::-webkit-scrollbar 
@@ -55,17 +55,16 @@ body::-webkit-scrollbar
 body::-webkit-scrollbar-track
     background-color: #fafafa
 
-body.dark-mode::-webkit-scrollbar-track 
+.dark-mode body::-webkit-scrollbar-track 
     background-color: var(--dark-mode-bg)
 
 body::-webkit-scrollbar-thumb
     border-radius: 1rem
     background-color: var(--scrollbar-color)
-    outline: 1px solid var(--scrollbar-color)
 
-body
+html
     scrollbar-color: var(--scrollbar-color) #fafafa
     scrollbar-width: thin
 
-body.dark-mode
-    scrollbar-color: var(--scrollbar-color) var(--dark-mode-bg)
+html.dark-mode
+    scrollbar-color: var(--scrollbar-color) var(--dark-mode-bg) !important
